profile and sign in changes

--- a/litterclear/Info.plist
+++ b/litterclear/Info.plist
@@ -69,5 +69,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library Access Warning</string>
+
 </dict>
 </plist>
