report and view report list

--- a/litterclear/Info.plist
+++ b/litterclear/Info.plist
@@ -48,6 +48,14 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Used for reporting litter</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>litter location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>litter location</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library Access Warning</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -69,8 +77,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Photo Library Access Warning</string>
-
 </dict>
 </plist>
